// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rPlot.pure-methods 1`] = `
{
  "begin": [Function],
  "icon": "name",
  "label": undefined,
  "motion": {
    "motionLine": [],
    "r": [Function],
  },
  "text": {
    "pause": [Function],
    "text": [Function],
    "textLine": [],
  },
  "title": "title",
  "type": "Talk",
  "use": [Function],
  "useInfo": [Function],
  "useMotion": [Function],
  "useText": [Function],
}
`;

exports[`rPlot.pure-methods 2`] = `
{
  "begin": [Function],
  "icon": "name",
  "label": undefined,
  "motion": {
    "motionLine": [],
    "r": [Function],
  },
  "text": {
    "pause": [Function],
    "text": [Function],
    "textLine": [],
  },
  "title": "title",
  "type": "Talk",
  "use": [Function],
  "useInfo": [Function],
  "useMotion": [Function],
  "useText": [Function],
}
`;

exports[`rPlot.pure-methods 3`] = `
{
  "begin": [Function],
  "icon": "name",
  "label": undefined,
  "motion": {
    "motionLine": [],
    "r": [Function],
  },
  "text": {
    "pause": [Function],
    "text": [Function],
    "textLine": [],
  },
  "title": "title",
  "type": "Aside",
  "use": [Function],
  "useInfo": [Function],
  "useMotion": [Function],
  "useText": [Function],
}
`;

exports[`rPlot.pure-methods 4`] = `
{
  "begin": [Function],
  "icon": "name",
  "label": undefined,
  "motion": {
    "motionLine": [],
    "r": [Function],
  },
  "text": {
    "pause": [Function],
    "text": [Function],
    "textLine": [],
  },
  "title": "title",
  "type": "Choice",
  "use": [Function],
  "useInfo": [Function],
  "useMotion": [Function],
  "useText": [Function],
}
`;
